WIP(BE): Initial rewrite of APIRequest to accomodate a generic entity. WIP(BE): Initial rewrite of Model to accomodate generic APIRequests

--- a/Pulse/Info.plist
+++ b/Pulse/Info.plist
@@ -19,6 +19,16 @@
 				<string></string>
 			</array>
 			<key>UTTypeIdentifier</key>
+			<string>omega-networks.Pulse.DeviceRoleRecord</string>
+			<key>UTTypeTagSpecification</key>
+			<dict/>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string></string>
+			</array>
+			<key>UTTypeIdentifier</key>
 			<string>your-api-domain.com</string>
 			<key>UTTypeTagSpecification</key>
 			<dict/>
